feat(backend/fronted) Diary implementation
